css/styles.css
.header-button {
  padding: 1rem;
  width: 100%;
  border-radius: 1rem;
  border-width: 0.1rem;
  font-family: Poppins, sans-serif;
}

.favorites-header {
  background-color: #f2da5a;
}

.list-of-ingredients-header {
  background-color: #7ada78;
}

.cooking-selection-header {
  background-color: #e58a48;
}

.ingredient-entry {
  display: flex;
  justify-content: space-around;
  width: 100%;
  padding: 1rem;
  margin: 0.25rem;
  border-radius: 0.5rem;
  font-family: Raleway, sans-serif;
}

.highlight {
  background-color: rgba(255, 199, 2, 0.5);
}

img {
  max-width: 50px;
}

h1 {
  text-align: center;
}

.list-of-ingredients {
  display: flex;
  flex-wrap: wrap;
}

@media screen and (min-width: 768px) {
  .header-button {
    padding: 2rem 10rem;
  }
}

